--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -46,8 +46,6 @@ layout: default
         {% if page.link %}<div><a href="{{ page.link }}" class="btn btn--primary">{{ site.data.ui-text[site.locale].ext_link_label | default: "Direct Link" }}</a></div>{% endif %}
       </section>
 
-      
-
       <footer class="page__meta">
         {% if site.data.ui-text[site.locale].meta_label %}
           <h4 class="page__meta-title">{{ site.data.ui-text[site.locale].meta_label }}</h4>
@@ -64,19 +62,20 @@ layout: default
 
       {% include post_pagination.html %}
 
-      <form
-  action="https://buttondown.email/api/emails/embed-subscribe/sightlessfun"
-  method="post"
-  target="popupwindow"
-  onsubmit="window.open('https://buttondown.email/sightlessfun', 'popupwindow')"
-  class="embeddable-buttondown-form"
->
-    <h4>Subscribe to the Newsletter!</h4>
-  <label for="bd-email">Enter your email</label>
-  <input type="email" name="email" id="bd-email">
-  <input type="hidden" value="1" name="embed"/>
-  <input type="submit" value="Subscribe" />
-</form>
+      <div>
+        <form
+    action="https://buttondown.email/api/emails/embed-subscribe/sightlessfun"
+    method="post"
+    target="popupwindow"
+    onsubmit="window.open('https://buttondown.email/sightlessfun', 'popupwindow')"
+    >
+      <h4>Subscribe to the Newsletter!</h4>
+    <label for="bd-email">Enter your email</label>
+    <input type="email" name="email" id="bd-email">
+    <input type="hidden" value="1" name="embed"/>
+    <input type="submit" value="Subscribe" />
+  </form>
+  </div>
     </div>
 
     {% if jekyll.environment == 'production' and site.comments.provider and page.comments %}
