--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -69,11 +69,11 @@ layout: default
     target="popupwindow"
     onsubmit="window.open('https://buttondown.email/sightlessfun', 'popupwindow')"
     >
-      <h4>Subscribe to the Newsletter!</h4>
+      <div><h4>Subscribe to the Newsletter!</h4></div>
     <label for="bd-email">Enter your email</label>
     <input type="email" name="email" id="bd-email">
     <input type="hidden" value="1" name="embed"/>
-    <input type="submit" value="Subscribe" />
+    <input class="btn btn--primary" type="submit" value="Subscribe" />
   </form>
   </div>
     </div>
