--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -62,21 +62,20 @@ layout: default
 
       {% include post_pagination.html %}
 
-      <div>
+      <h4>Stay up to date by subscribing to the newsletter!!</h4>
+
         <form
     action="https://buttondown.email/api/emails/embed-subscribe/sightlessfun"
     method="post"
     target="popupwindow"
     onsubmit="window.open('https://buttondown.email/sightlessfun', 'popupwindow')"
     >
-      <div><h4>Subscribe to the Newsletter!</h4></div>
     <label for="bd-email">Enter your email</label>
-    <input type="email" name="email" id="bd-email">
+    <input type="email" name="email" id="bd-email" placeholder="name@example.com">
     <input type="hidden" value="1" name="embed"/>
     <input class="btn btn--primary" type="submit" value="Subscribe" />
   </form>
-  </div>
-    </div>
+</div>
 
     {% if jekyll.environment == 'production' and site.comments.provider and page.comments %}
       {% include comments.html %}
