Tweaked logo size.

--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -39,6 +39,11 @@
   }
 }
 
+.site-title-logo {
+  max-height: 80;
+  width: auto;
+}
+
 .site-title {
   display: -webkit-box;
   display: -ms-flexbox;
