--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -62,7 +62,7 @@ layout: default
 
       {% include post_pagination.html %}
       
-      {% if page.newsletter include newsletter.html %} {% endif %}
+      {% if page.newsletter %} {% include newsletter.html %} {% endif %}
 </div>
 
     {% if jekyll.environment == 'production' and site.comments.provider and page.comments %}
